Fix some overflow issues

--- a/src/app/cv/scss/list.scss
+++ b/src/app/cv/scss/list.scss
@@ -62,6 +62,7 @@ app-cv {
   }
 
   li.listItem div .body {
+    overflow-x: hidden;
     opacity: 0.8;
     text-align: left;
     line-height: 1.3;
